# MaixCDK

examples/vido/: .gitignore  README.md  app.yaml
examples/vido/main/: CMakeLists.txt  sample_vdecvo.c
examples/vido/main/include/: cvi_comm.h  vpss_helper.h
examples/vido/main/src/: decode.c  touch.cpp
